Bugfix double overflow on desktop

--- a/src/styles/Page.scss
+++ b/src/styles/Page.scss
@@ -1,8 +1,3 @@
-html,
-body {
-    overflow-x: hidden;
-}
-
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
